# tacopy

./: .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarking/: README.md  __init__.py  benchmark.py
benchmarking/samples/: __init__.py  factorial.py  fibonacci.py  gcd.py  list_length.py  power.py  reverse_string.py  sum_to_n.py
src/tacopy/: __init__.py  transformer.py  unparser.py  validator.py
tests/: __init__.py  test_correctness.py  test_integration.py  test_nested_rejection.py  test_transformer.py  test_validator.py
tests/__snapshots__/: test_transformer.ambr
