[project]
name = "tacopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raaid Tanveer", email = "raaidraiyantanveer@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "astpretty>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "syrupy>=5.0.0",
]
